--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -185,7 +185,7 @@
             android:summary="@string/pref_autoUpdateIntervallOrTime_sum"
             android:title="@string/pref_autoUpdateIntervallOrTime_title"/>
         <de.danoeh.antennapod.preferences.SwitchCompatPreference
-            android:defaultValue="false"
+            android:defaultValue="true"
             android:enabled="true"
             android:key="prefMobileUpdate"
             android:summary="@string/pref_mobileUpdate_sum"
